--- a/templates/importer/docker-compose.yml
+++ b/templates/importer/docker-compose.yml
@@ -47,6 +47,9 @@ services:
       SERVICE_ELASTICSEARCH_USERNAME: "{{elasticsearch_svckibana_username}}"
       SERVICE_ELASTICSEARCH_PASSWORD: "{{elasticsearch_svckibana_password}}"
       KAFKA_BOOTSTRAPSERVERS: kafka:9092
+      PROCESS_ERRORPROCESS: false
+      KAFKA_POLLRECORD: 200
+      KAFKA_POLLINGTIME: 200
     external_links:
     - kafka/kafka:kafka
     - elasticsearch/elasticsearch-client:elasticsearch
@@ -66,6 +69,9 @@ services:
       SERVICE_ELASTICSEARCH_USERNAME: "{{elasticsearch_svckibana_username}}"
       SERVICE_ELASTICSEARCH_PASSWORD: "{{elasticsearch_svckibana_password}}"
       KAFKA_BOOTSTRAPSERVERS: kafka:9092
+      PROCESS_RETRYPROCESS: false
+      KAFKA_POLLRECORD: 200
+      KAFKA_POLLINGTIME: 200
     external_links:
     - kafka/kafka:kafka
     - elasticsearch/elasticsearch-client:elasticsearch
