--- a/templates/elasticsearch/docker-compose.yml
+++ b/templates/elasticsearch/docker-compose.yml
@@ -21,7 +21,7 @@ services:
             io.rancher.scheduler.affinity:host_label: role_es_master=true
             io.rancher.container.hostname_override: container_name
             io.rancher.sidekicks: elasticsearch-master-config,elasticsearch-master-sysctl
-        image: docker.elastic.co/elasticsearch/elasticsearch:{{elasticsearch_version}}
+        image: {{docker_elastic_repo}}/elasticsearch/elasticsearch:{{elasticsearch_version}}
         command:
         - /scripts/startup.sh
         external_links:
@@ -72,7 +72,7 @@ services:
             io.rancher.scheduler.affinity:host_label: role_elasticsearch=true
             io.rancher.container.hostname_override: container_name
             io.rancher.sidekicks: elasticsearch-data-config,elasticsearch-data-sysctl
-        image: docker.elastic.co/elasticsearch/elasticsearch:{{elasticsearch_version}}
+        image: {{docker_elastic_repo}}/elasticsearch/elasticsearch:{{elasticsearch_version}}
         command:
         - /scripts/startup.sh
         external_links:
@@ -124,7 +124,7 @@ services:
             io.rancher.scheduler.affinity:host_label_soft_ne: role_elasticsearch=true
             io.rancher.container.hostname_override: container_name
             io.rancher.sidekicks: elasticsearch-client-config,elasticsearch-client-sysctl
-        image: docker.elastic.co/elasticsearch/elasticsearch:{{elasticsearch_version}}
+        image: {{docker_elastic_repo}}/elasticsearch/elasticsearch:{{elasticsearch_version}}
         command:
         - /scripts/startup.sh
         external_links:
