--- a/templates/metricbeat/docker-compose.yml
+++ b/templates/metricbeat/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     image: adopteunops/metricbeat-config:1.0.0-SNAPSHOT
 
   metricbeat:
-    image: docker.elastic.co/beats/metricbeat:{{elasticsearch_version}}
+    image: {{docker_elastic_repo}}/beats/metricbeat:{{elasticsearch_version}}
     labels:
         io.rancher.container.pull_image: always
         io.rancher.sidekicks: metricbeat-config
