--- a/templates/packetbeat/docker-compose.yml
+++ b/templates/packetbeat/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     image: adopteunops/packetbeat-config:1.0.0-SNAPSHOT
 
   packetbeat:
-    image: docker.elastic.co/beats/packetbeat:{{elasticsearch_version}}
+    image: {{docker_elastic_repo}}/beats/packetbeat:{{elasticsearch_version}}
     labels:
         io.rancher.container.pull_image: always
         io.rancher.sidekicks: packetbeat-config
