--- a/requirements.yml
+++ b/requirements.yml
@@ -5,6 +5,7 @@
 - src: AdopteUnOps.configure-ssh
 - src: AdopteUnOps.install-debugging-tools
 - src: AdopteUnOps.docker
+- src: AdopteUnOps.docker-login
 - src: AdopteUnOps.upgrade-packages
 - src: AdopteUnOps.configure-unix-accounts
 
