update default mapping

--- a/templates/elasticsearch/default-mapping.json
+++ b/templates/elasticsearch/default-mapping.json
@@ -124,6 +124,22 @@
           }
         },
         {
+          "double_gen_field": {
+            "mapping": {
+              "type": "double"
+            },
+            "match": "*_double"
+          }
+        },
+        {
+          "long_gen_field": {
+            "mapping": {
+              "type": "long"
+            },
+            "match": "*_long"
+          }
+        },
+        {
           "na_string_field": {
             "mapping": {
               "norms": false,
