default index pattern for elk-monitoring stack

--- a/templates/elasticsearch/elasticsearch-prometheus-rules.conf
+++ b/templates/elasticsearch/elasticsearch-prometheus-rules.conf
@@ -1,23 +1,19 @@
 {% raw %}
-ALERT ElasticsearchIndexState
-  IF es_index_status != 0
-  FOR 10m
-  LABELS {
-    severity="major"
-  }
-  ANNOTATIONS {
-    summary = "Indice not green for index {{ $$labels.index }}",
-    description = "Indice may be yellow(1) or red(2). State: {{ $$value }}."
-  }
+- alert: ElasticsearchIndexState
+  expr: es_index_status != 0
+  for: 10m
+  labels:
+    severity: "major"
+  annotations:
+    summary: "Indice not green for index {{ $$labels.index }}"
+    description: "Indice may be yellow(1) or red(2). State: {{ $$value }}."
 
-ALERT ElasticsearchMasterState
-  IF count(es_cluster_status{service_name="elasticsearch-master"}) < 2
-  FOR 5m
-  LABELS {
-    severity="critical"
-  }
-  ANNOTATIONS {
-    summary = "Elasticsearch masters cluster unhealthy",
-    description = "Not enough Elasticsearch master nodes for the cluster to be healthy."
-  }
+- alert: ElasticsearchMasterState
+  expr: count(es_cluster_status{service_name="elasticsearch-master"}) < 2
+  for: 5m
+  labels:
+    severity: "critical"
+  annotations:
+    summary: "Elasticsearch masters cluster unhealthy"
+    description: "Not enough Elasticsearch master nodes for the cluster to be healthy."
 {% endraw %}
