--- a/templates/elk-monitoring/docker-compose.yml
+++ b/templates/elk-monitoring/docker-compose.yml
@@ -183,6 +183,9 @@ services:
       logspout.exclude: 'true'
     tty: true
     stdin_open: true
+    links:
+    - "elasticsearch:"
+
 
 volumes:
   elasticsearch-volume:
