--- a/templates/prometheus/infra-prometheus-rules.conf
+++ b/templates/prometheus/infra-prometheus-rules.conf
@@ -1,77 +1,65 @@
 {% raw %}
-ALERT HostDown
-  IF rancher_host_agent_state{state != 'active'} == 1
-  FOR 5m
-  LABELS { severity = "critical" }
-  ANNOTATIONS {
-    summary = "Host {{ $$labels.name }} down",
-    description = "{{ $$labels.name }} has been {{ $$labels.state }} for more than 5 minutes."
-  }
+- alert: HostDown
+  expr: rancher_host_agent_state{state != 'active'} == 1
+  for: 5m
+  labels:
+    severity: "critical"
+  annotations:
+    summary: "Host {{ $$labels.name }} down"
+    description: "{{ $$labels.name }} has been {{ $$labels.state }} for: more than 5 minutes."
 
-ALERT StackUnHealthy
-  IF rancher_stack_health_status{health_state='unhealthy'} == 1
-  FOR 10m
-  LABELS {
-    severity = "critical",
-    service = "{{ $$labels.name }}"
-  }
-  ANNOTATIONS {
-    summary = "Stack {{ $$labels.name }} is unhealthy",
-    description = "{{ $$labels.name }} has been unhealthy for more than 10 minutes."
-  }
+- alert: StackUnHealthy
+  expr: rancher_stack_health_status{health_state='unhealthy'} == 1
+  for: 10m
+  labels:
+    severity: "critical"
+    service: "{{ $$labels.name }}"
+  annotations:
+    summary: "Stack {{ $$labels.name }} is unhealthy"
+    description: "{{ $$labels.name }} has been unhealthy for: more than 10 minutes."
 
-ALERT DiskWillFillInOneDay
-  IF predict_linear(node_filesystem_free{mountpoint='/rootfs'}[1h], 24*3600) < 0
-  FOR 1h
-  LABELS {
-    severity="major"
-  }
-  ANNOTATIONS {
-    summary = "Instance {{ $$labels.name }} disk warning",
-    description = "{{ $$labels.name }} : {{ $$labels.mountpoint }} will be filled within 1 day."
-  }
+- alert: DiskWillFillInOneDay
+  expr: predict_linear(node_filesystem_free{mountpoint='/rootfs'}[1h], 24*3600) < 0
+  for: 1h
+  labels:
+    severity: "major"
+  annotations:
+    summary: "Instance {{ $$labels.name }} disk warning"
+    description: "{{ $$labels.name }} : {{ $$labels.mountpoint }} will be filled within 1 day."
 
-ALERT DiskWillFillIn4Hours
-  IF predict_linear(node_filesystem_free{mountpoint='/rootfs'}[1h], 4*3600) < 0
-  FOR 5m
-  LABELS {
-    severity="critical"
-  }
-  ANNOTATIONS {
-    summary = "Instance {{ $$labels.name }} disk alert",
-    description = "{{ $$labels.name }} : {{ $$labels.mountpoint }} will be filled within 4 hours."
-  }
+- alert: DiskWillFillIn4Hours
+  expr: predict_linear(node_filesystem_free{mountpoint='/rootfs'}[1h], 4*3600) < 0
+  for: 5m
+  labels:
+    severity: "critical"
+  annotations:
+    summary: "Instance {{ $$labels.name }} disk alert"
+    description: "{{ $$labels.name }} : {{ $$labels.mountpoint }} will be filled within 4 hours."
 
-ALERT RootDiskUsedAt85Percent
-  IF (node_filesystem_size{mountpoint='/rootfs'} - node_filesystem_avail{mountpoint='/rootfs'}) / node_filesystem_size{mountpoint='/rootfs'} * 100 > 85
-  FOR 5m
-  LABELS {
-    severity="critical"
-  }
-  ANNOTATIONS {
-    summary = "Instance {{ $$labels.name }} disk alert : root disk > 85%",
-    description = "Disk used on {{ $$labels.name }} root partition is {{ $$value }}%"
-  }
+- alert: RootDiskUsedAt85Percent
+  expr: (node_filesystem_size{mountpoint='/rootfs'} - node_filesystem_avail{mountpoint='/rootfs'}) / node_filesystem_size{mountpoint='/rootfs'} * 100 > 85
+  for: 5m
+  labels:
+    severity: "critical"
+  annotations:
+    summary: "Instance {{ $$labels.name }} disk alert : root disk > 85%"
+    description: "Disk used on {{ $$labels.name }} root partition is {{ $$value }}%"
 
-ALERT MaxFileDescriptor
-  IF node_filefd_allocated > 45000
-  FOR 10m
-  LABELS {
-    severity="major"
-  }
-  ANNOTATIONS {
-    summary = "High file descriptor usage",
-    description = "File descriptor open are really high on {{ $$labels.instance }}."
-  }
+- alert: MaxFileDescriptor
+  expr: node_filefd_allocated > 45000
+  for: 10m
+  labels:
+    severity: "major"
+  annotations:
+    summary: "High file descriptor usage"
+    description: "File descriptor open are really high on {{ $$labels.instance }}."
 
-ALERT ScrapingTargetState
-  IF up == 0
-  FOR 10m
-  LABELS {
-    severity="minor"
-  }
-  ANNOTATIONS {
-    summary = "Unable to contact scraping target",
-    description = "Unable to contact scraping target on {{ $$labels.instance }} from job {{ $$labels.job }}."
-  }
+- alert: ScrapingTargetState
+  expr: up == 0
+  for: 10m
+  labels:
+    severity: "minor"
+  annotations:
+    summary: "Unable to contact scraping target"
+    description: "Unable to contact scraping target on {{ $$labels.instance }} from job {{ $$labels.job }}."
 {% endraw %}
