--- a/templates/elasticsearch/elasticsearch-prometheus-rules.conf
+++ b/templates/elasticsearch/elasticsearch-prometheus-rules.conf
@@ -1,19 +1,19 @@
-{% raw %}
 - alert: ElasticsearchIndexState
   expr: es_index_status != 0
   for: 10m
   labels:
     severity: "major"
   annotations:
+{% raw %}
     summary: "Indice not green for index {{ $$labels.index }}"
     description: "Indice may be yellow(1) or red(2). State: {{ $$value }}."
+{% endraw %}
 
 - alert: ElasticsearchMasterState
-  expr: count(es_cluster_status{service_name="elasticsearch-master"}) < 2
+  expr: count(es_os_cpu_percent{node=~"elasticsearch-elasticsearch-master.*"}) < {{elk_monitoring_minimum_master_nodes }}
   for: 5m
   labels:
     severity: "critical"
   annotations:
     summary: "Elasticsearch masters cluster unhealthy"
     description: "Not enough Elasticsearch master nodes for the cluster to be healthy."
-{% endraw %}
