--- a/templates/elk-monitoring/rancher-compose.yml
+++ b/templates/elk-monitoring/rancher-compose.yml
@@ -40,6 +40,11 @@ services:
             }
           }
 
+          # We drop the logs from Rancher stack Network (at the moment)
+          if "rancher/net" in [docker][image] {
+           drop {}
+          }
+
         outputs: |
           elasticsearch {
             hosts => ["elasticsearch.rancher.internal:9200"]
@@ -56,7 +61,7 @@ services:
             codec => "json"
           }
           file {
-            path => "/host/var/log/kern.log"
+            path => "/host/var/log/kern*.log"
             type => "kernel"
           }
         outputs: |
@@ -70,6 +75,16 @@ services:
   elasticsearch:
     scale: {{elk_monitoring_minimum_master_nodes}}
     retain_ip: true
+    metadata:
+      elasticsearch-config: |
+{{ lookup('template', elk_monitoring_conf_file) | indent(8, True) }}
+
+{% if elasticsearch_plugins_name | length > 0 %}
+      elasticsearch-plugins: |
+{% for plugin in elasticsearch_plugins_name %}
+        {{plugin}}
+{% endfor %}
+{% endif %}
 
 {% if elasticsearch_license_file != "" %}
   elasticsearch-setup:
@@ -78,58 +93,25 @@ services:
 {{ lookup('template', elasticsearch_license_file) | indent(8, True) }}
 {% endif %}
 
+  elasticsearch-prometheus-exporter:
+    scale: 1
+    start_on_create: true
+    health_check:
+      response_timeout: 2000
+      healthy_threshold: 2
+      port: 7979
+      unhealthy_threshold: 3
+      initializing_timeout: 60000
+      interval: 2000
+      strategy: recreate
+      reinitializing_timeout: 60000
+
   curator:
     metadata:
       curator-actions: |
-        actions:
-          1:
-            action: delete_indices
-            description: >-
-              Delete indices older than 45 days (based on index name), for logstash-
-              prefixed indices. Ignore the error if the filter does not result in an
-              actionable list of indices (ignore_empty_list) and exit cleanly.
-            options:
-              ignore_empty_list: True
-            filters:
-            - filtertype: pattern
-              kind: prefix
-              value: logstash-
-            - filtertype: age
-              source: name
-              direction: older
-              timestring: '%Y.%m.%d'
-              unit: days
-              unit_count: 45
-          2:
-            action: forcemerge
-            description: >-
-              forceMerge logstash- prefixed indices older than 2 days (based on index
-              creation_date) to 2 segments per shard.  Delay 120 seconds between each
-              forceMerge operation to allow the cluster to quiesce. Skip indices that
-              have already been forcemerged to the minimum number of segments to avoid
-              reprocessing.
-            options:
-              max_num_segments: 2
-              delay: 120
-              timeout_override:
-              ignore_empty_list: True
-              continue_if_exception: False
-            filters:
-            - filtertype: pattern
-              kind: prefix
-              value: logstash-
-              exclude:
-            - filtertype: age
-              source: creation_date
-              direction: older
-              unit: days
-              unit_count: 2
-              exclude:
-            - filtertype: forcemerged
-              max_num_segments: 2
-              exclude:
+{{ lookup('template', elk_monitoring_curator_config_file) | indent(8, True) }}
 
   kibana-setup:
     metadata:
-      elasticdump: |
+      index-pattern: |
 {{ lookup('template', elk_monitoring_kibana_conf_file) | indent(8, True) }}
